crates/sunrise-tui/src/snapshots/sunrise_tui__render__tests__snapshot_command_line_active.snap
---
source: crates/sunrise-tui/src/render.rs
expression: "frame_to_string(50, 10, &state)"
---
 1:Today  2:Inbox  3:Stream  4:Search  5:Focus    
Sunrise — Today    (0 tasks)                      
──────────────────────────────────────────────────
┌Tasks───────────────────────────────────────────┐
│                                                │
│                                                │
│                                                │
│                                                │
└────────────────────────────────────────────────┘
 CMD     :vi
