crates/sunrise-tui/src/snapshots/sunrise_tui__render__tests__snapshot_focus_empty.snap
---
source: crates/sunrise-tui/src/render.rs
expression: "frame_to_string(60, 10, &state)"
---
 1:Today  2:Inbox  3:Stream  4:Search  5:Focus              
┌Focus─────────────────────────────────────────────────────┐
│no task selected                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
 NORMAL
