crates/sunrise-tui/src/snapshots/sunrise_tui__render__tests__snapshot_focus_preview_halfblocks.snap
---
source: crates/sunrise-tui/src/render.rs
expression: buffer_text(term.backend().buffer())
---
 1:Today  2:Inbox  3:Stream  4:Search  5:Focus  6:Routines            
┌Focus───────────────────────────────────┐┌Preview───────────────────┐
│[ ] task 3                              ││▀                         │
│                                        ││                          │
│state:     Todo                         ││                          │
│priority:  —                            ││                          │
│energy:    —                            ││                          │
│scheduled: —                            ││                          │
└────────────────────────────────────────┘└──────────────────────────┘
 NORMAL
