crates/sunrise-tui/src/snapshots/sunrise_tui__render__tests__snapshot_focus_preview_placeholder.snap
---
source: crates/sunrise-tui/src/render.rs
expression: "frame_to_string(70, 10, &state)"
---
 1:Today  2:Inbox  3:Stream  4:Search  5:Focus                        
┌Focus───────────────────────────────────┐┌Preview───────────────────┐
│[ ] task 3                              ││attachment preview — no   │
│                                        ││attachments API in core v1│
│state:     Todo                         ││                          │
│priority:  —                            ││                          │
│energy:    —                            ││                          │
│scheduled: —                            ││                          │
└────────────────────────────────────────┘└──────────────────────────┘
 NORMAL
