crates/sunrise-tui/src/snapshots/sunrise_tui__render__tests__snapshot_search_results.snap
---
source: crates/sunrise-tui/src/render.rs
expression: "frame_to_string(60, 14, &state)"
---
 1:Today  2:Inbox  3:Stream  4:Search  5:Focus              
┌Search────────────────────────────────────────────────────┐
│/ task                                                    │
└──────────────────────────────────────────────────────────┘
┌Results───────────────────────────────────────────────────┐
│▶ [ ] task 1                                              │
│  [ ] task 2                                              │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
 NORMAL
