crates/sunrise-tui/src/snapshots/sunrise_tui__render__tests__snapshot_stream_view_empty.snap
---
source: crates/sunrise-tui/src/render.rs
expression: "frame_to_string(60, 12, &state)"
---
 1:Today  2:Inbox  3:Stream  4:Search  5:Focus  6:Routines  
┌Streams─────────┐┌Tasks───────────────────────────────────┐
│                ││                                        │
│                ││                                        │
│                ││                                        │
│                ││                                        │
└────────────────┘│                                        │
┌Contexts────────┐│                                        │
│none — press C  ││                                        │
│                ││                                        │
└────────────────┘└────────────────────────────────────────┘
 NORMAL
