crates/sunrise-tui/src/snapshots/sunrise_tui__render__tests__snapshot_stream_view_populated_second_stream_selected.snap
---
source: crates/sunrise-tui/src/render.rs
expression: "frame_to_string(60, 12, &state)"
---
 1:Today  2:Inbox  3:Stream  4:Search  5:Focus  6:Routines  
┌Streams─────────┐┌Work────────────────────────────────────┐
│  Inbox [1]     ││▶ [ ] task 1                            │
│▶ Work [3]      ││  [ ] task 2                            │
│                ││                                        │
│                ││                                        │
│                ││                                        │
│                ││                                        │
│                ││                                        │
│                ││                                        │
└────────────────┘└────────────────────────────────────────┘
 NORMAL
