crates/sunrise-tui/src/snapshots/sunrise_tui__render__tests__snapshot_today_empty.snap
---
source: crates/sunrise-tui/src/render.rs
expression: "frame_to_string(50, 10, &state)"
---
 1:Today  2:Inbox  3:Stream  4:Search  5:Focus  6:
Sunrise — Today    (0 tasks)                      
──────────────────────────────────────────────────
┌Tasks───────────────────────────────────────────┐
│                                                │
│       Nothing due or scheduled for today       │
│                                                │
│    c captures · 2 inbox · 5 planner · ? keys   │
└────────────────────────────────────────────────┘
 NORMAL
